# coding-sandbox-backend

./: .gitignore  .webui_secret_key  README.md  TASK.md  decisions.md  pyproject.toml  requirements.txt  sandbox.db  test_executor.py
app/: db.py  executor.py  main.py  schemas.py  services.py
data/: main.py
data/sessions/8de7a3cc-d3b6-4f12-99a7-7985278b890c/: main.py
frontend/: index.html
runner/: Dockerfile
