[project]
name = "coding-sandbox-backend"
version = "0.1.0"
description = "Secure Python code execution sandbox with FastAPI, Docker, SQLite, and LLM/Open WebUI integration"
readme = "README.md"
authors = [
    { name = "Rajesh Pithani", email = "rajeshpithani777@gmail.com" }
]
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi[standard]>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "docker>=7.1.0",
    "requests>=2.32.0",
    "pydantic>=2.0.0",
    "open-webui"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pre-commit",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = [
    "**/test*.py",
    "**/__pycache__/*"
]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py312"